# rp2040-expander

./: CMakeLists.txt  LICENSE  README.md
demo/: blink_prog.h  demo_7seg.c  demo_7seg.h  demo_gpios.h  demo_stepper.c  demo_stepper.h  picoexp_demo.c  rp2040exp_api_test.c  rp2040exp_demo.c
host/: picoexp.c  picoexp.h  picoexp_dap.c  rp2040exp.c  rp2040exp.h  rp2040exp_dap.c
host/include/: picoexp_dap.h  picoexp_port_api.h  rp2040_includes.h  rp2040exp_dap.h  rp2040exp_port_api.h
host/include/hardware/: address_mapped.h
host/include/hardware/structs/: clocks.h  dma.h  iobank0.h  ioqspi.h  pads_qspi.h  padsbank0.h  timer.h
port_rp2040/: picoexp_port.c  picoexp_port.h  rp2040exp_port.c  rp2040exp_port.h
port_rpi/: picoexp_port.c  picoexp_port.h  rp2040exp_port.c  rp2040exp_port.h
